==> snailtrailorg/bluethroat/documents/reference/component/mcu/WCH/RISC-V/CH585/CH585EVT/EXAM/USB/USBHS/DEVICE/CompositeKM/User/usbd_compostie_km.c <==
#include <ch585_usbhs_device.h>
#include <usbd_composite_km.h>

void USART2_Init( uint32_t baudrate )
{
    GPIOA_SetBits(GPIO_Pin_7);
    GPIOA_ModeCfg(GPIO_Pin_6, GPIO_ModeIN_PU);
    GPIOA_ModeCfg(GPIO_Pin_7, GPIO_ModeOut_PP_5mA);
    UART2_BaudRateCfg(baudrate);
    R8_UART2_FCR = (2 << 6) | RB_FCR_TX_FIFO_CLR | RB_FCR_RX_FIFO_CLR | RB_FCR_FIFO_EN;
    R8_UART2_LCR = RB_LCR_WORD_SZ;
    R8_UART2_IER = RB_IER_TXD_EN;
    R8_UART2_DIV = 1;

    UART2_ByteTrigCfg(UART_7BYTE_TRIG);
    UART2_INTCfg(ENABLE, RB_IER_RECV_RDY | RB_IER_LINE_STAT);
    PFIC_EnableIRQ(UART2_IRQn);
}

void KB_Scan_Init( void )
{
    GPIOB_ModeCfg(GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_3, GPIO_ModeIN_PU);
}

void KB_Sleep_Wakeup_Cfg( void )
{
    GPIOB_ITModeCfg(GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_3, GPIO_ITMode_FallEdge);
}

void MS_Scan_Init( void )
{
    GPIOA_ModeCfg(GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11, GPIO_ModeIN_PU);
}

void MS_Sleep_Wakeup_Cfg( void )
{
    GPIOA_ITModeCfg(GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11, GPIO_ITMode_FallEdge);
}

void MCU_Sleep_Wakeup_Operate( void )
{
    PRINT( "Sleep\r\n" );
    PFIC_DisableAllIRQ( );

    R8_USB2_CTRL &= ~USBHS_UD_PHY_SUSPENDM;
    GPIOA_ClearITFlagBit(GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11);
    GPIOB_ClearITFlagBit(GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_3);

    __WFE( );

    R8_USB2_CTRL |= USBHS_UD_PHY_SUSPENDM;

    if( GPIOA_ReadITFlagBit( (GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11) ) != RESET )
    {
        GPIOA_ClearITFlagBit(GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11);
        USBHS_Send_Resume( );
    }
    else if ( GPIOB_ReadITFlagBit( (GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_3) ) != RESET )
    {
        GPIOB_ClearITFlagBit(GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_3);
        USBHS_Send_Resume( );
    }

    PFIC_EnableAllIRQ( );
    PRINT( "Wake\r\n" );
}
